Remove StoreCouplingHandler and refactor models for state encapsulation and modular scheduling. Updated dependencies and Kafka configuration.